# hwpx-studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  HWPX_QUICK_REF.md  README.md  SKILL.md  hwpx_competitive_analysis.html  kcup_report_auto.json  pyproject.toml
.github/workflows/: ci.yml
agents/: planner.md  python-reviewer.md  security-reviewer.md  tdd-guide.md
commands/: hwpx-create.md  hwpx-edit.md  hwpx-read.md  plan.md  python-review.md  tdd.md  validate-all.md
docs/: gonmun_guide.md
docs/examples/: gonmun_gian.json
references/: block-types.md  edit-commands.md  style-guide.md  xml-structure.md
rules/common/: coding-style.md  git-workflow.md  security.md  testing.md
rules/python/: coding-style.md  security.md  testing.md
scripts/: analyze_template.py  build_hwpx.py  create_document.py  diff_docs.py  edit_document.py  mcp_server.py  page_guard.py  property_registry.py  section_builder.py
src/hwpx_studio/: __init__.py  build_hwpx.py  create_document.py  crypto.py  diff_docs.py  edit_document.py  html_preview.py  mcp_server.py  property_registry.py  read_document.py  section_builder.py  text_extract.py
src/hwpx_studio/office/: __init__.py
src/hwpx_studio/templates/kcup/: header.xml  section0.xml
src/hwpx_studio/templates/kcup/mappings/: mtg2.json
templates/kcup/forms/: call_report.json  meeting_prep.json  meeting_result.json  plan_doc.json  response_doc.json
templates/kcup/mappings/: cost.json  ref3.json
tests/: conftest.py  test_01_validate.py  test_02_create_validate.py  test_03_read_document.py  test_04_roundtrip.py  test_05_edit_document.py  test_06_section_builder.py  test_07_html_preview.py  test_08_mcp.py
